--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,9 +3,9 @@
 ubuntu1804cis_skip_for_travis: false
 
 ubuntu1804cis_notauto: false
-ubuntu1804cis_section1: true
-ubuntu1804cis_section2: true
-ubuntu1804cis_section3: true
+ubuntu1804cis_section1: false
+ubuntu1804cis_section2: false
+ubuntu1804cis_section3: false
 ubuntu1804cis_section4: true
 ubuntu1804cis_section5: true
 ubuntu1804cis_section6: true
